deploy-webapp.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worklog
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: worklog-deployment
        version: v1
    spec:
      containers:
      - name: worklog
        image: maxshapiro32/worklog
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: worklog-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 32000
      name: http
  type: NodePort
  selector:
    name: worklog-deployment
